--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0"
   },
+  "engines": {
+    "node":"16.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
